Commit View Model de Circulo

--- a/FigurasGeometricas/FigurasGeometricas/Views/ViewCuadrado.xaml
+++ b/FigurasGeometricas/FigurasGeometricas/Views/ViewCuadrado.xaml
@@ -18,6 +18,8 @@
             <Label Text="Perimetro" />
             <Label Text="" />
 
+            <Button Text="Crear"></Button>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
