--- a/FigurasGeometricas/FigurasGeometricas/Views/ViewCirculo.xaml
+++ b/FigurasGeometricas/FigurasGeometricas/Views/ViewCirculo.xaml
@@ -3,21 +3,29 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="FigurasGeometricas.Views.ViewCirculo"
+    xmlns:local="clr-namespace:FigurasGeometricas.ViewModels"
     Title="Circulos"
     >
+    <ContentPage.BindingContext>
+        <local:ViewModelCirculo></local:ViewModelCirculo>
+    </ContentPage.BindingContext>
+
     <ContentPage.Content>
 
         <StackLayout>
 
             <Label Text="Formulario de Circulos"  FontSize="25" />
 
-            <Entry Keyboard="Numeric" Placeholder="Ingrese Readio de Circulo"  ></Entry>
+            <Label Text="Radio" />
+            <Entry Keyboard="Numeric" Text="{Binding Radio}"  ></Entry>
 
             <Label Text="Area" ></Label>
-            <Label Text=""> </Label>
+            <Label Text="{Binding Area} "> </Label>
 
             <Label Text="Perimetro"></Label>
-            <Label Text=""></Label>
+            <Label Text="{Binding Perimetro}"></Label>
+
+            <Button Text="Crear" Command="{Binding CrearCirculo}" ></Button>
              
         </StackLayout>
 
