--- a/FigurasGeometricas/FigurasGeometricas/MainPage.xaml
+++ b/FigurasGeometricas/FigurasGeometricas/MainPage.xaml
@@ -7,6 +7,7 @@
     <local:ViewCirculo></local:ViewCirculo>
     <local:ViewCuadrado></local:ViewCuadrado>
     <local:ViewTriangulos></local:ViewTriangulos>
+    <local:Videos></local:Videos>
 
 
 </TabbedPage>
