--- a/FigurasGeometricas/FigurasGeometricas/Views/ViewTriangulos.xaml
+++ b/FigurasGeometricas/FigurasGeometricas/Views/ViewTriangulos.xaml
@@ -27,7 +27,9 @@
             <Label Text="Perimetro" />
             <Label Text="{Binding T.perimetro}" />
 
-            <Button Text="Crear" Command="{Binding Crear}" /> 
+            <Button Text="Crear" Command="{Binding Crear}" />
+
+            <Button Text="Abrir" Command="{Binding Abrir}"></Button>
 
         </StackLayout>
     </ContentPage.Content>
