Commite de Serializacion de Listas

--- a/FigurasGeometricas/FigurasGeometricas/Views/ViewCirculo.xaml
+++ b/FigurasGeometricas/FigurasGeometricas/Views/ViewCirculo.xaml
@@ -29,6 +29,8 @@
 
             <Button Text="Abrir" Command="{Binding Abrir}"></Button>
 
+            <Label Text="{Binding CantidadRegistros}" ></Label>
+
             
         </StackLayout>
 
